undo last overflow fix, it clips on widescreen

--- a/src/Style/main.sass
+++ b/src/Style/main.sass
@@ -34,7 +34,6 @@ body
     gap: 2rem
     flex-direction: column
     justify-content: flex-end
-    overflow: hidden
 
 .status-bar
     display: flex
